--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1388,5 +1388,21 @@
         <!-- 2: All carriers who want 4G -->
         <item>@string/enhanced_4g_lte_mode_summary_4g_calling</item>
     </string-array>
+    
+    <!-- Security Settings -->
+    <string-array name="deny_new_usb_entries">
+        <item>Disallow new USB peripherals</item>
+        <item>Allow new USB peripherals when unlocked</item>
+        <item>Allow new USB peripherals</item>
+    </string-array>
 
+    <!-- Do not translate. -->
+    <string-array name="deny_new_usb_values" translatable="false">
+        <!-- Do not translate. -->
+        <item>enabled</item>
+        <!-- Do not translate. -->
+        <item>dynamic</item>
+        <!-- Do not translate. -->
+        <item>disabled</item>
+    </string-array>
 </resources>
